# TelegramForwarderX

./: .env.example  .replit  PHASE3_VERIFICATION_GUIDE.md  PHASE4_COMPLETION_SUMMARY.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_VERIFICATION_GUIDE.md  phase2_verification_report.json  phase4_verification_report.json  phase6_verification_report.json  pyproject.toml  replit.md  run_phase3_verification.py  run_phase6_verification.py  start_phase3.py
attached_assets/: Pasted--Objective-Polish-and-finalize-the-Forwarding-Mappings-interface-and-modal-to-ensure-visual-con-1755022238762_1755022238763.txt  Pasted--Phase-4-Verification-Prompt-Objective-Validate-that-AutoForwardX-now-supports-user-role-control-1754939951781_1754939951782.txt  Pasted--Phase-5-Development-Prompt-Multi-Account-Management-Team-Collaboration-Resilience-Objective-1754941740029_1754941740030.txt  Pasted--Phase-6-Verification-Prompt-AutoForwardX-Worker-Scaling-RAM-Optimization-Goal-Verify-that-P-1754985813309_1754985813310.txt  Pasted--Prompt-Phase-6-Development-Scalable-Worker-System-RAM-Optimization-Objective-Implement-a-s-1754984906167_1754984906167.txt  Pasted--Prompt-Split-AutoForwardX-into-Separate-Admin-Panel-User-Dashboard-Objective-Separate-the-1754987453354_1754987453355.txt  Pasted-AutoForwardX-Phase-1-Development-Prompt-Goal-Set-up-the-core-base-architecture-for-AutoForwardX--1754933924138_1754933924139.txt  Pasted-Begin-Phase-2-of-the-AutoForwardX-project-Goal-Implement-Core-Forwarding-Logic-with-Filter-Edit-1754934635858_1754934635859.txt  (+10 more)
bot/: telegram_bot.py
client/: index.html
(+78 files in other folders)
